server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest-next-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      server: nest-next-server
  template:
    metadata:
      labels:
        server: nest-next-server
    spec:
      containers:
        - name: nest-next-server
          image: nest-next-server
          imagePullPolicy: Never
          ports:
            - containerPort: 3333
