server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nest-next-server-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3333
  selector:
    server: nest-next-server
