server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nest-next-server-ingress
spec:
  # ingressClassName: nest-next-server-ingress-example
  rules:
    - host: server.devops.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nest-next-server-service
                port:
                  number: 3333
